benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_Add_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_Add.rs
Time: 2025-09-15 18:57:28

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:97:19
   |
97 |     if exp_val == 0 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:124:89
    |
124 |             res as nat % modz as nat * (b as nat % modz as nat) == Exp_int(base as nat, exp_val - e as nat) % (modz as nat),
    |                                                                    -------              ^^^^^^^^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                    |
    |                                                                    arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error[E0605]: non-primitive cast: `verus_builtin::nat` as `usize`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:120:17
    |
120 |     let mut e = exp_val as usize;  // since exp_val <= 2^n, n>=0, fine
    |                 ^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:97:19
   |
97 |     if exp_val == 0 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:124:89
    |
124 |             res as nat % modz as nat * (b as nat % modz as nat) == Exp_int(base as nat, exp_val - e as nat) % (modz as nat),
    |                                                                    -------              ^^^^^^^^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                    |
    |                                                                    arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error[E0605]: non-primitive cast: `verus_builtin::nat` as `usize`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:120:17
    |
120 |     let mut e = exp_val as usize;  // since exp_val <= 2^n, n>=0, fine
    |                 ^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.
